@@ -33,11 +33,6 @@ KChartParams::KChartParams()
     m_dcop = 0;
     //dcopObject(); // build it
     setDrawSolidExcessArrows(true);
-    //use 2 as default decimal precision
-    KDChartAxisParams  axis
-        = axisParams( KDChartAxisParams::AxisPosLeft );
-    axis.setAxisDigitsBehindComma( 2 );
-    setAxisParams( KDChartAxisParams::AxisPosLeft, axis );
 }
 
 
